--- a/11thLauncher/Views/Controls/GameView.xaml
+++ b/11thLauncher/Views/Controls/GameView.xaml
@@ -13,9 +13,9 @@
              xmlns:conv="clr-namespace:_11thLauncher.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="337" d:DesignWidth="615" d:DataContext="{d:DesignInstance Type=vm:GameViewModel}">
-    <Control.Resources>
+    <UserControl.Resources>
         <conv:LaunchOptionConverter x:Key="OptionConverter" />
-    </Control.Resources>
+    </UserControl.Resources>
     <Grid>
         <controls:SplitButton ItemsSource="{Binding Source={util:Enumeration {x:Type m:LaunchOption}}}" 
                               SelectedItem="{Binding LaunchOption, Converter={StaticResource OptionConverter}}" DisplayMemberPath="Description"
@@ -30,18 +30,14 @@
             </controls:SplitButton.IconTemplate>
         </controls:SplitButton>
 
-        <Label Content="{x:Static resx:Strings.S_PLATFORM}"
-               HorizontalAlignment="Left" VerticalAlignment="Top" 
-               Padding="0,5,5,5" Margin="227,102,0,0" />
+        <Label Content="{x:Static resx:Strings.S_PLATFORM}" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0,5,5,5" Margin="227,102,0,0" />
         <ComboBox ItemsSource="{Binding Source={util:Enumeration {x:Type m:LaunchPlatform}}}" DisplayMemberPath="Description" 
                   SelectedValue="{Binding Platform}" SelectedValuePath="Value"
                   ToolTip="{x:Static resx:Strings.S_PLATFORM_TIP}"
-            HorizontalAlignment="Left" VerticalAlignment="Top" 
-            Width="80" Margin="290,102,0,0" />
+                  HorizontalAlignment="Left" VerticalAlignment="Top" Width="80" Margin="290,102,0,0" />
         <Button x:Name="ButtonCopyToClipboard" ToolTip="{x:Static resx:Strings.S_BTN_COPY_TO_CLIPBOARD}"
                 Style="{DynamicResource MetroCircleButtonStyle}" 
-                Width="32" Height="32" Margin="377,100,0,0"
-                HorizontalAlignment="Left" VerticalAlignment="Top" >
+                Width="32" Height="32" Margin="377,100,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" >
             <Rectangle Width="15" Height="15" Fill="{DynamicResource AccentColorBrush}">
                 <Rectangle.OpacityMask>
                     <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_link}" />
