--- a/11thLauncher/Views/SettingsView.xaml
+++ b/11thLauncher/Views/SettingsView.xaml
@@ -63,15 +63,17 @@
             <TabItem Header="{x:Static resx:Strings.S_SETTINGS_REPOSITORY}">
                 <Grid Width="542">
                     <StackPanel HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" VerticalAlignment="Top" Width="522">
-                        <Label Content="Opciones de java" FontWeight="Bold"/>
+                        <Label Content="{x:Static resx:Strings.S_LABEL_JAVA_OPTIONS}" FontWeight="Bold"/>
                     </StackPanel>
-                    <Label Content="Ruta de Java:" HorizontalAlignment="Left" Margin="10,106,0,0" VerticalAlignment="Top"/>
-                    <Label Content="Java en PATH:" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top"/>
+                    <Label Content="{x:Static resx:Strings.S_LABEL_JAVA_PATH}" HorizontalAlignment="Left" Margin="10,106,0,0" VerticalAlignment="Top"/>
+                    <Label Content="{x:Static resx:Strings.S_LABEL_JAVA_PATH_VAR}" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top"/>
                     <TextBox x:Name="JavaPath" TextWrapping="Wrap" IsReadOnly="True"
                              HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="296" Margin="131,106,0,0" />
                     <Button x:Name="SelectJavaPath" Content="{x:Static resx:Strings.S_BTN_BROWSE}" 
                             HorizontalAlignment="Left" VerticalAlignment="Top" Margin="432,106,0,0" Width="100"/>
-                    <Label Content="NOTA: Solamente indicar la ruta de Java si no se &#xA;ha detectado en PATH o si se quiere utilizar una &#xA;versión distinta. JRE's compatibles: 7 y 8." HorizontalAlignment="Left" Margin="247,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.026,-0.038" FontWeight="Medium" Width="285" Height="66"/>
+                    <Label HorizontalAlignment="Left" VerticalAlignment="Top" Margin="247,40,0,0" FontWeight="Medium" Width="285" Height="66">
+                        <AccessText Text="{x:Static resx:Strings.S_LABEL_JAVA_DISCLAIMER}" FontWeight="Medium" TextWrapping="WrapWithOverflow" />
+                    </Label>
 
                     <Label HorizontalAlignment="Left" Margin="128,42,0,0" VerticalAlignment="Top" FontWeight="Bold">
                         <Label.Style>
@@ -89,12 +91,12 @@
                             </Style>
                         </Label.Style>
                     </Label>
-                    <Label Content="Ruta de Arma3Sync:" HorizontalAlignment="Left" Margin="10,182,0,0" VerticalAlignment="Top"/>
+                    <Label Content="{x:Static resx:Strings.S_LABEL_ARMA3SYNC_PATH}" HorizontalAlignment="Left" Margin="10,182,0,0" VerticalAlignment="Top"/>
                     <TextBox x:Name="SyncPath" HorizontalAlignment="Left" Height="23" Margin="131,183,0,0" VerticalAlignment="Top" Width="296" IsReadOnly="True"/>
                     <Button x:Name="SelectArma3SyncPath" Content="{x:Static resx:Strings.S_BTN_BROWSE}" 
                             HorizontalAlignment="Left" VerticalAlignment="Top" Margin="432,183,0,0" Width="100"/>
                     <StackPanel HorizontalAlignment="Left" Height="23" Margin="10,150,0,0" VerticalAlignment="Top" Width="522">
-                        <Label Content="Opciones de Arma3Sync" FontWeight="Bold"/>
+                        <Label Content="{x:Static resx:Strings.S_LABEL_ARMA3SYNC_OPTIONS}" FontWeight="Bold"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
