--- a/11thLauncher/Views/Controls/AddonsView.xaml
+++ b/11thLauncher/Views/Controls/AddonsView.xaml
@@ -26,7 +26,7 @@
                     <DockPanel Tag="{Binding DataContext, ElementName=Addons}">
                         <CheckBox IsChecked="{Binding IsEnabled}" ToolTip="{Binding MetaData.Name}" HorizontalContentAlignment="Stretch">
                             <CheckBox.Content>
-                                <TextBlock Text="{Binding Name}"/>
+                                <TextBlock Text="{Binding Name}" IsHitTestVisible="False"/>
                             </CheckBox.Content>
                         </CheckBox>
                         <DockPanel.ContextMenu>
