Removed global exception handler

--- a/11thLauncher/Views/Controls/GameView.xaml
+++ b/11thLauncher/Views/Controls/GameView.xaml
@@ -45,15 +45,14 @@
             </Rectangle>
         </Button>
 
-        <Label Content="{x:Static resx:Strings.S_SERVER}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,188,0,0" Padding="0,5,5,5"/>
-        <TextBox Text="{Binding Server}" HorizontalAlignment="Left" Height="23" Width="188" Margin="227,214,0,0" VerticalAlignment="Top" />
+        <TextBox Text="{Binding Server, Delay=1000}" controls:TextBoxHelper.Watermark="{x:Static resx:Strings.S_SERVER}" controls:TextBoxHelper.UseFloatingWatermark="True"
+                 HorizontalAlignment="Left" Width="188" Margin="227,214,0,0" VerticalAlignment="Top" />
 
-        <Label Content="{x:Static resx:Strings.S_PORT}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="227,245,0,0" Padding="0,5,5,5"/>
-        <TextBox Text="{Binding Port, Delay=1000}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="80" Margin="227,271,0,0" />
+        <TextBox Text="{Binding Port, Delay=1000}" controls:TextBoxHelper.Watermark="{x:Static resx:Strings.S_PORT}" controls:TextBoxHelper.UseFloatingWatermark="True"
+                 HorizontalAlignment="Left" VerticalAlignment="Top" Width="80" Margin="227,271,0,0" />
 
-        <Label Content="{x:Static resx:Strings.S_PASSWORD}" HorizontalAlignment="Left" Margin="320,245,0,0" VerticalAlignment="Top" Padding="0,5,5,5"/>
         <PasswordBox behaviors:PasswordBoxBindingBehavior.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=1000}"
-            HorizontalAlignment="Left" VerticalAlignment="Top" Width="95" Margin="320,271,0,0">
-        </PasswordBox>
+                     controls:TextBoxHelper.Watermark="{x:Static resx:Strings.S_PASSWORD}" controls:TextBoxHelper.UseFloatingWatermark="True"
+                     HorizontalAlignment="Left" VerticalAlignment="Top" Width="95" Margin="320,271,0,0"/>
     </Grid>
 </UserControl>
