--- a/11thLauncher/Views/Controls/GameView.xaml
+++ b/11thLauncher/Views/Controls/GameView.xaml
@@ -45,6 +45,15 @@
             </Rectangle>
         </Button>
 
+        <ToggleButton IsEnabled="False" ToolTip="{Binding UacTooltip}" ToolTipService.ShowOnDisabled="True"
+                      Width="48" Height="48" Margin="229,146,338,143" Style="{DynamicResource MahApps.Metro.Styles.MetroCircleToggleButtonStyle}" >
+            <Rectangle Width="30" Height="30">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="{Binding UacIcon}"/>
+                </Rectangle.Fill>
+            </Rectangle>
+        </ToggleButton>
+
         <TextBox Text="{Binding Server, Delay=1000}" controls:TextBoxHelper.Watermark="{x:Static resx:Strings.S_SERVER}" controls:TextBoxHelper.UseFloatingWatermark="True"
                  HorizontalAlignment="Left" Width="188" Margin="227,214,0,0" VerticalAlignment="Top" />
 
