Added steam detection

--- a/11thLauncher/Views/ShellView.xaml
+++ b/11thLauncher/Views/ShellView.xaml
@@ -16,6 +16,7 @@
                       TitleAlignment="Left"
                       Icon="/11thLauncher;component/Resources/icon.ico" 
                       Style="{DynamicResource CleanWindowStyleKey}"
+                      UseLayoutRounding="True"
                       WindowStartupLocation="CenterScreen" 
                       Height="517" Width="644"
                       ResizeMode="CanMinimize" 
