--- a/11thLauncher/Views/Controls/GameView.xaml
+++ b/11thLauncher/Views/Controls/GameView.xaml
@@ -45,11 +45,20 @@
             </Rectangle>
         </Button>
 
-        <ToggleButton IsEnabled="False" ToolTip="{Binding UacTooltip}" ToolTipService.ShowOnDisabled="True" Width="48" Height="48" Margin="229,146,338,143" 
-                      Style="{DynamicResource MahApps.Metro.Styles.MetroCircleToggleButtonStyle}" Background="{DynamicResource AccentColorBrush4}">
+        <ToggleButton IsEnabled="False" ToolTip="{Binding UacTooltip}" ToolTipService.ShowOnDisabled="True" Width="40" Height="40" Margin="249,145,318,144" 
+                      Style="{DynamicResource MahApps.Metro.Styles.MetroCircleToggleButtonStyle}" Background="{DynamicResource ControlBorderBrush}">
             <Rectangle Width="30" Height="30">
                 <Rectangle.Fill>
                     <ImageBrush ImageSource="{Binding UacIcon}"/>
+                </Rectangle.Fill>
+            </Rectangle>
+        </ToggleButton>
+
+        <ToggleButton IsEnabled="False" ToolTip="{Binding SteamTooltip}" ToolTipService.ShowOnDisabled="True" Width="40" Height="40" Margin="340,145,227,144" 
+                      Style="{DynamicResource MahApps.Metro.Styles.MetroCircleToggleButtonStyle}" Background="{DynamicResource ControlBorderBrush}">
+            <Rectangle Width="30" Height="30">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="{Binding SteamIcon}"/>
                 </Rectangle.Fill>
             </Rectangle>
         </ToggleButton>
