--- a/11thLauncher/Views/ShellView.xaml
+++ b/11thLauncher/Views/ShellView.xaml
@@ -46,8 +46,24 @@
                     <TextBlock Margin="0,1,0,0"><Run Text="{x:Static resx:Strings.S_BTN_SETTINGS}"/></TextBlock>
                 </StackPanel>
             </Button>
+            <Button cal:Message.Attach="ButtonUpdate" 
+                    ToolTip="{x:Static resx:Strings.S_BTN_UPDATE_TIP}" >
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle Width="15" Height="15" Margin="0,0,5,0" Fill="{DynamicResource AccentBaseColorBrush}">
+                        <Rectangle.OpacityMask>
+                            <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_refresh}" />
+                        </Rectangle.OpacityMask>
+                    </Rectangle>
+                    <TextBlock Margin="0,1,0,0"><Run Text="{x:Static resx:Strings.S_BTN_UPDATE}"/></TextBlock>
+                </StackPanel>
+            </Button>
             <Button cal:Message.Attach="ButtonAbout" ToolTip="{x:Static resx:Strings.S_BTN_ABOUT_TIP}">
                 <StackPanel Orientation="Horizontal">
+                    <Rectangle Width="10" Height="13" Margin="0,0,5,0" Fill="{DynamicResource AccentBaseColorBrush}">
+                        <Rectangle.OpacityMask>
+                            <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_question}" />
+                        </Rectangle.OpacityMask>
+                    </Rectangle>
                     <TextBlock Margin="0,1,0,0" Text="{x:Static resx:Strings.S_BTN_ABOUT}"/>
                 </StackPanel>
             </Button>
